--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <!-- header -->
 
     <header>
-      <a href="/">
-        <p>WebStudio</p>
-      </a>
       <nav>
+        <a href="./index.html"><p>WebStudio</p></a>
+
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -21,20 +20,21 @@
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
       <!-- picture with button -->
-      <div>
-        <section>
-          <h1>Effective Solutions for Your Business</h1>
-          <button>Order Service</button>
-        </section>
-      </div>
+
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
+      </section>
 
       <!-- values -->
 
