--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
       <nav>
-        <a href="./index.html"><p>WebStudio</p></a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -123,10 +123,8 @@
     <!-- footer -->
     <footer>
       <section>
-        <h2>Contacts</h2>
-        <a href="/">
-          <p>WebStudio</p>
-        </a>
+        <a href="./index.html">WebStudio</a>
+
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
