--- a/index.html
+++ b/index.html
@@ -119,9 +119,10 @@
     <!-- footer -->
     <footer>
       <section>
-        <a href="./index.html">WebStudio</a>
+        <p> <a href="./index.html">WebStudio</a></p>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </section>
     </footer>
   </body>
 </html>
+
