--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
@@ -77,13 +77,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/Rectangle71.jpg" alt="web sites" width="360"/>
+            <img src="./images/Rectangle71.jpg" alt="web sites" width="360" />
           </li>
           <li>
-            <img src="./images/Rectangle72.jpg" alt="web sites" width="360"/>
+            <img src="./images/Rectangle72.jpg" alt="web sites" width="360" />
           </li>
           <li>
-            <img src="./images/Rectangle73.jpg" alt="copywriting" width="360"/>
+            <img src="./images/Rectangle73.jpg" alt="copywriting" width="360" />
           </li>
         </ul>
       </section>
@@ -92,23 +92,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="Man with beard" width="264"/>
+            <img src="./images/img.jpg" alt="Man with beard" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" alt="Smiling man" width="264"/>
+            <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./images/img-3.jpg" alt="Young woman" width="264"/>
+            <img src="./images/img-3.jpg" alt="Young woman" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/img-4.jpg" alt="Young man" width="264"/>
+            <img src="./images/img-4.jpg" alt="Young man" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -118,11 +118,11 @@
 
     <!-- footer -->
     <footer>
-      <section>
-        <p> <a href="./index.html">WebStudio</a></p>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-      </section>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
-
