--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
 
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span class="accent">Web</span>Studio</a>
 
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Studio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
+        <ul class="contact-list list">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
@@ -31,39 +32,39 @@
     <main>
       <!-- picture with button -->
 
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
 
       <!-- values -->
 
-      <section>
-        <h2>Values</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Values</h2>
+        <ul class="list values">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="title.">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -73,9 +74,9 @@
       </section>
 
       <!-- what we are doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list work-examples">
           <li>
             <img src="./images/Rectangle71.jpg" alt="web sites" width="360" />
           </li>
@@ -87,29 +88,30 @@
           </li>
         </ul>
       </section>
+
       <!-- team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="Man with beard" width="264" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="team-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="team-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/img-3.jpg" alt="Young woman" width="264" />
-            <h3>Camila Garcia</h3>
+            <h3 class="team-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Young man" width="264" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="team-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -118,7 +120,7 @@
 
     <!-- footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span class="accent">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
