--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <header>
       <nav>
-        <a href="./index.html"><span class="accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          ><span class="accent">Web</span>Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="" class="link current">Studio</a></li>
@@ -119,8 +121,10 @@
     </main>
 
     <!-- footer -->
-    <footer>
-      <a href="./index.html"><span class="accent">Web</span>Studio</a>
+    <footer class="footer-style">
+      <a class="footer-logo" href="./index.html"
+        ><span class="accent">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
