--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,12 @@
   </head>
 
   <body>
-    <!-- header -->
+    <!-- header -->te7euu
     <header>
       <nav>
-        <a href="./index.html"><span class="accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html"
+          ><span class="accent">Web</span>Studio</a
+        >
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Studio</a></li>
@@ -148,8 +150,10 @@
     </main>
 
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer-style">
+      <a class="footer-logo" href="./index.html"
+        ><span class="accent">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
