--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <!-- header -->te7euu
+    <!-- header -->
     <header>
       <nav>
         <a class="logo" href="./index.html"
@@ -36,13 +36,19 @@
       <!-- buttoms -->
       <section>
         <h1>What are we doing</h1>
-        <nav>
-          <button type="button">All</button>
-          <button type="button">Web Site</button>
-          <button type="button">App</button>
-          <button type="button">Design</button>
-          <button type="button">Marketing</button>
-        </nav>
+        <ul class="list">
+          <li><button type="button" class="button primary">All</button></li>
+          <li>
+            <button type="button" class="button secondary">Web Site</button>
+          </li>
+          <li><button type="button" class="button secondary">App</button></li>
+          <li>
+            <button type="button" class="button secondary">Design</button>
+          </li>
+          <li>
+            <button type="button" class="button secondary">Marketing</button>
+          </li>
+        </ul>
       </section>
 
       <!-- portfolio -->
@@ -95,7 +101,7 @@
           <li>
             <a href="#">
               <img
-                src="./images/img 5.2.jpg"
+                src="./images/img-5.1.jpg"
                 alt="screen with picture"
                 width="360"
               />
@@ -106,7 +112,7 @@
           <li>
             <a href="#">
               <img
-                src="./images/img-5.1.jpg"
+                src="./images/img-5.2.jpg"
                 alt="smiling woman with mobilephone"
                 width="360"
               />
