--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <button type="button" class="button order">Order Service</button>
       </section>
 
       <!-- values -->
