--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -35,7 +41,7 @@
       <!-- picture with button -->
 
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button order">Order Service</button>
       </section>
 
@@ -46,28 +52,28 @@
         <ul class="list values">
           <li>
             <h3 class="title">Strategy</h3>
-            <p>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="title">Punctuality</h3>
-            <p>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="title">Diligence</h3>
-            <p>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="title.">Technologies</h3>
-            <p>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -92,7 +98,7 @@
       </section>
 
       <!-- team -->
-      <section class="section">
+      <section class="section team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li>
