--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -49,10 +54,9 @@
             <button type="button" class="button secondary">Marketing</button>
           </li>
         </ul>
-      </section>
 
-      <!-- portfolio -->
-      <section>
+        <!-- portfolio -->
+
         <ul>
           <li>
             <a href="#">
