--- a/index.html
+++ b/index.html
@@ -104,23 +104,23 @@
           <li>
             <img src="./images/img.jpg" alt="Man with beard" width="264" />
             <h3 class="team-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
             <h3 class="team-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/img-3.jpg" alt="Young woman" width="264" />
             <h3 class="team-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" alt="Young man" width="264" />
             <h3 class="team-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -131,7 +131,7 @@
       <a class="footer-logo" href="./index.html"
         ><span class="accent">Web</span>Studio</a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
