--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -39,8 +39,8 @@
 
     <main>
       <!-- buttoms -->
-      <section>
-        <h1>What are we doing</h1>
+      <section class="section">
+        <h1 class="main-title">What are we doing</h1>
         <ul class="list">
           <li><button type="button" class="button primary">All</button></li>
           <li>
@@ -57,7 +57,7 @@
 
         <!-- portfolio -->
 
-        <ul>
+        <ul class="list">
           <li>
             <a href="#">
               <img
@@ -65,8 +65,8 @@
                 alt="Mobile applications"
                 width="360"
               />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="card-title">Banking App Interface Concept</h2>
+              <p class="card-text">App</p>
             </a>
           </li>
 
@@ -77,8 +77,8 @@
                 alt="Payment with mobile"
                 width="360"
               />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="card-title">Cashless Payment</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
 
@@ -89,16 +89,16 @@
                 alt="Notebook and mobilephone"
                 width="360"
               />
-              <h2>Meditation App</h2>
-              <p>App</p>
+              <h2 class="card-title">Meditation App</h2>
+              <p class="card-text">App</p>
             </a>
           </li>
 
           <li>
             <a href="#">
               <img src="./images/img-4.1.jpg" alt="Car wheel" width="360" />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="card-title">Taxi Service</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
 
@@ -109,8 +109,8 @@
                 alt="screen with picture"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="card-title">Screen Illustrations</h2>
+              <p class="card-text">Design</p>
             </a>
           </li>
           <li>
@@ -120,8 +120,8 @@
                 alt="smiling woman with mobilephone"
                 width="360"
               />
-              <h2>Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="card-title">Online Courses</h2>
+              <p class="card-text">Marketing</p>
             </a>
           </li>
 
@@ -132,8 +132,8 @@
                 alt="instagram pages"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="card-title">Instagram Stories Concept</h2>
+              <p class="card-text">Design</p>
             </a>
           </li>
           <li>
@@ -143,16 +143,16 @@
                 alt="bag with vegetables"
                 width="360"
               />
-              <h2>Organic Food</h2>
-              <p>Web site</p>
+              <h2 class="card-title">Organic Food</h2>
+              <p class="card-text">Web site</p>
             </a>
           </li>
 
           <li>
             <a href="#">
               <img src="./images/img-8.1.jpg" alt="cappuchino" width="360" />
-              <h2>Fresh Coffee</h2>
-              <p>Web site</p>
+              <h2 class="card-title">Fresh Coffee</h2>
+              <p class="card-text">Web site</p>
             </a>
           </li>
         </ul>
@@ -164,7 +164,7 @@
       <a class="footer-logo" href="./index.html"
         ><span class="accent">Web</span>Studio</a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
