--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- values -->
 
       <section class="section">
-        <h2 class="section-title">Values</h2>
+        <h2 class="section-title" hidden>Values</h2>
         <ul class="list values">
           <li>
             <h3 class="title">Strategy</h3>
