--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     <main>
       <!-- buttoms -->
       <section class="section">
-        <h1 class="main-title">What are we doing</h1>
+        <h1 class="main-title" hidden>What are we doing</h1>
         <ul class="list">
           <li><button type="button" class="button primary">All</button></li>
           <li>
