--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -19,20 +19,24 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
+        <a class="logo list" href="./index.html"
+          >Web<span class="accent">Studio</span></a
         >
 
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link current">Portfolio</a></li>
+          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul class="list contact-list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <address class="contact-list">
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -42,7 +46,7 @@
     <main>
       <!-- buttoms -->
       <section class="section">
-        <h1 class="main-title" hidden>What are we doing</h1>
+        <h1 hidden class="main-title" hi>What are we doing</h1>
         <ul class="list">
           <li><button type="button" class="button primary">All</button></li>
           <li>
@@ -164,7 +168,7 @@
     <!-- footer -->
     <footer class="footer-style">
       <a class="footer-logo" href="./index.html"
-        ><span class="accent">Web</span>Studio</a
+        >Web<span class="footer-accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
