--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!-- header -->
 
     <header>
       <nav>
-        <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
+        <a class="logo list" href="./index.html"
+          >Web<span class="accent">Studio</span></a
         >
 
         <ul class="site-nav list">
-          <li><a href="" class="link current">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="./portfolio.html" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul class="list contact-list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <address class="contact-list">
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -74,7 +79,7 @@
             </p>
           </li>
           <li>
-            <h3 class="title.">Technologies</h3>
+            <h3 class="title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -103,23 +108,23 @@
       <section class="section team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-card">
             <img src="./images/img.jpg" alt="Man with beard" width="264" />
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="team-card">
             <img src="./images/img-3.jpg" alt="Young woman" width="264" />
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img src="./images/img-4.jpg" alt="Young man" width="264" />
             <h3 class="team-title">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
@@ -130,8 +135,8 @@
 
     <!-- footer -->
     <footer class="footer-style">
-      <a class="footer-logo" href="./index.html"
-        ><span class="accent">Web</span>Studio</a
+      <a class="footer-logo link" href="./index.html"
+        >Web<span class="footer-accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
