--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 
         <ul class="list">
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-1.1.jpg"
                 alt="Mobile applications"
@@ -77,7 +77,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/./img-2.1.jpg"
                 alt="Payment with mobile"
@@ -89,7 +89,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-3.1.jpg"
                 alt="Notebook and mobilephone"
@@ -101,7 +101,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img src="./images/img-4.1.jpg" alt="Car wheel" width="360" />
               <h2 class="card-title">Taxi Service</h2>
               <p class="card-text">Marketing</p>
@@ -109,7 +109,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-5.1.jpg"
                 alt="screen with picture"
@@ -120,7 +120,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-5.2.jpg"
                 alt="smiling woman with mobilephone"
@@ -132,7 +132,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-6.1.jpg"
                 alt="instagram pages"
@@ -143,22 +143,22 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img
                 src="./images/img-7.1.jpg"
                 alt="bag with vegetables"
                 width="360"
               />
               <h2 class="card-title">Organic Food</h2>
-              <p class="card-text">Web site</p>
+              <p class="card-text">Web Site</p>
             </a>
           </li>
 
           <li>
-            <a href="#">
+            <a href="#" class="link">
               <img src="./images/img-8.1.jpg" alt="cappuchino" width="360" />
               <h2 class="card-title">Fresh Coffee</h2>
-              <p class="card-text">Web site</p>
+              <p class="card-text">Web Site</p>
             </a>
           </li>
         </ul>
