--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
       <nav>
-        <a class="logo list" href="./index.html"
+        <a class="logo list link" href="./index.html"
           >Web<span class="accent">Studio</span></a
         >
 
