--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!-- header -->
     <header>
       <nav>
-        <a class="logo list" href="./index.html"
+        <a class="logo list link" href="./index.html"
           >Web<span class="accent">Studio</span></a
         >
 
@@ -46,7 +46,7 @@
     <main>
       <!-- buttoms -->
       <section class="section">
-        <h1 hidden class="main-title" hi>What are we doing</h1>
+        <h1 hidden class="main-title">What are we doing</h1>
         <ul class="list">
           <li><button type="button" class="button primary">All</button></li>
           <li>
@@ -67,7 +67,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/img-1.1.jpg"
+                src="./images/img5.jpg"
                 alt="Mobile applications"
                 width="360"
               />
@@ -79,7 +79,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/./img-2.1.jpg"
+                src="./images/img6.jpg"
                 alt="Payment with mobile"
                 width="360"
               />
@@ -91,7 +91,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/img-3.1.jpg"
+                src="./images/img7.jpg"
                 alt="Notebook and mobilephone"
                 width="360"
               />
@@ -102,7 +102,7 @@
 
           <li>
             <a href="#" class="link">
-              <img src="./images/img-4.1.jpg" alt="Car wheel" width="360" />
+              <img src="./images/img8.jpg" alt="Car wheel" width="360" />
               <h2 class="card-title">Taxi Service</h2>
               <p class="card-text">Marketing</p>
             </a>
@@ -111,7 +111,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/img-5.1.jpg"
+                src="./images/img9.jpg"
                 alt="screen with picture"
                 width="360"
               />
@@ -122,7 +122,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/img-5.2.jpg"
+                src="./images/img10.jpg"
                 alt="smiling woman with mobilephone"
                 width="360"
               />
@@ -133,11 +133,7 @@
 
           <li>
             <a href="#" class="link">
-              <img
-                src="./images/img-6.1.jpg"
-                alt="instagram pages"
-                width="360"
-              />
+              <img src="./images/img11.jpg" alt="instagram pages" width="360" />
               <h2 class="card-title">Instagram Stories Concept</h2>
               <p class="card-text">Design</p>
             </a>
@@ -145,7 +141,7 @@
           <li>
             <a href="#" class="link">
               <img
-                src="./images/img-7.1.jpg"
+                src="./images/img12.jpg"
                 alt="bag with vegetables"
                 width="360"
               />
@@ -156,7 +152,7 @@
 
           <li>
             <a href="#" class="link">
-              <img src="./images/img-8.1.jpg" alt="cappuchino" width="360" />
+              <img src="./images/img14.jpg" alt="cappuchino" width="360" />
               <h2 class="card-title">Fresh Coffee</h2>
               <p class="card-text">Web Site</p>
             </a>
@@ -167,7 +163,7 @@
 
     <!-- footer -->
     <footer class="footer-style">
-      <a class="footer-logo" href="./index.html"
+      <a class="footer-logo link" href="./index.html"
         >Web<span class="footer-accent">Studio</span></a
       >
       <p class="footer-text">
