--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
               >info@devstudio.com</a
             >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
