--- a/portfolio.html
+++ b/portfolio.html
@@ -48,16 +48,18 @@
       <section class="section">
         <h1 hidden class="main-title">What are we doing</h1>
         <ul class="list">
-          <li><button type="button" class="button primary">All</button></li>
           <li>
-            <button type="button" class="button secondary">Web Site</button>
-          </li>
-          <li><button type="button" class="button secondary">App</button></li>
-          <li>
-            <button type="button" class="button secondary">Design</button>
+            <button type="button" class="button primary first">All</button>
           </li>
           <li>
-            <button type="button" class="button secondary">Marketing</button>
+            <button type="button" class="button primary">Web Site</button>
+          </li>
+          <li><button type="button" class="button primary">App</button></li>
+          <li>
+            <button type="button" class="button primary">Design</button>
+          </li>
+          <li>
+            <button type="button" class="button primary">Marketing</button>
           </li>
         </ul>
 
