--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
         <h1 hidden class="main-title">What are we doing</h1>
         <ul class="list">
           <li>
-            <button type="button" class="button primary first">All</button>
+            <button type="button" class="button primary">All</button>
           </li>
           <li>
             <button type="button" class="button primary">Web Site</button>
