--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <ul class="list values">
           <li>
             <h3 class="title">Strategy</h3>
-            <p class="text">
+            <p class="text-value">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="title">Punctuality</h3>
-            <p class="text">
+            <p class="text-value">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="title">Diligence</h3>
-            <p class="text">
+            <p class="text-value">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="title">Technologies</h3>
-            <p class="text">
+            <p class="text-value">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
