--- a/portfolio.html
+++ b/portfolio.html
@@ -24,20 +24,26 @@
         >
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
+          <li><a href="./index.html" class="link-navigation">Studio</a></li>
+          <li>
+            <a href="./portfolio.html" class="link-navigation">Portfolio</a>
+          </li>
+          <li><a href="" class="link-navigation">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contact-list">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link-contacts"
               >info@devstudio.com</a
             >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="tel:+110001111111" class="link-contacts"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
