--- a/portfolio.html
+++ b/portfolio.html
@@ -24,23 +24,27 @@
         >
 
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link-navigation">Studio</a></li>
           <li>
-            <a href="./portfolio.html" class="link-navigation">Portfolio</a>
+            <a href="./index.html" class="link-navigation link">Studio</a>
           </li>
-          <li><a href="" class="link-navigation">Contacts</a></li>
+          <li>
+            <a href="./portfolio.html" class="link-navigation link"
+              >Portfolio</a
+            >
+          </li>
+          <li><a href="" class="link-navigation link">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contact-list">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link-contacts"
+            <a href="mailto:info@devstudio.com" class="link-contacts link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link-contacts"
+            <a href="tel:+110001111111" class="link-contacts link"
               >+11 (000) 111-11-11</a
             >
           </li>
