--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -19,8 +23,8 @@
   <body>
     <!-- header -->
 
-    <header>
-      <nav>
+    <header class="page-header">
+      <nav class="nav-container">
         <a class="logo list link" href="./index.html"
           >Web<span class="accent">Studio</span></a
         >
@@ -39,7 +43,7 @@
       </nav>
 
       <address class="contact-list">
-        <ul class="list">
+        <ul class="list contacts-container">
           <li>
             <a href="mailto:info@devstudio.com" class="link-contacts link"
               >info@devstudio.com</a
