--- a/index.html
+++ b/index.html
@@ -24,51 +24,56 @@
     <!-- header -->
 
     <header class="page-header">
-      <nav class="nav-container">
-        <a class="logo list link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
-        >
+      <div class="container">
+        <nav>
+          <a class="logo list link" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
 
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" class="link-navigation link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="link-navigation link"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="" class="link-navigation link">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link-navigation link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link-navigation link"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="" class="link-navigation link">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contact-list">
-        <ul class="list contacts-container">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link-contacts link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link-contacts link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contact-list">
+          <ul class="list contacts-container">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link-contacts link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- picture with button -->
 
       <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button order">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button order">Order Service</button>
+        </div>
       </section>
 
       <!-- values -->
-      <div class="container">
-        <section>
+
+      <section>
+        <div class="container">
           <h2 class="section-title" hidden>Values</h2>
           <ul class="list values">
             <li>
@@ -100,63 +105,75 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <!-- what we are doing -->
+
       <section class="section">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list work-examples">
-          <li>
-            <img src="./images/Rectangle71.jpg" alt="web sites" width="360" />
-          </li>
-          <li>
-            <img src="./images/Rectangle72.jpg" alt="web sites" width="360" />
-          </li>
-          <li>
-            <img src="./images/Rectangle73.jpg" alt="copywriting" width="360" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="list work-examples">
+            <li>
+              <img src="./images/Rectangle71.jpg" alt="web sites" width="360" />
+            </li>
+            <li>
+              <img src="./images/Rectangle72.jpg" alt="web sites" width="360" />
+            </li>
+            <li>
+              <img
+                src="./images/Rectangle73.jpg"
+                alt="copywriting"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- team -->
-      <section class="section team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li class="team-card">
-            <img src="./images/img.jpg" alt="Man with beard" width="264" />
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
 
-          <li class="team-card">
-            <img src="./images/img-3.jpg" alt="Young woman" width="264" />
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img src="./images/img-4.jpg" alt="Young man" width="264" />
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-card">
+              <img src="./images/img.jpg" alt="Man with beard" width="264" />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+
+            <li class="team-card">
+              <img src="./images/img-3.jpg" alt="Young woman" width="264" />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img src="./images/img-4.jpg" alt="Young man" width="264" />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer -->
     <footer class="footer-style">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
