--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <main>
       <!-- picture with button -->
 
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button order">Order Service</button>
@@ -72,7 +72,7 @@
 
       <!-- values -->
 
-      <section>
+      <section class="section no-padding">
         <div class="container">
           <h2 class="section-title" hidden>Values</h2>
           <ul class="list values">
@@ -110,7 +110,7 @@
 
       <!-- what we are doing -->
 
-      <section>
+      <section class="section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list work-examples">
@@ -133,7 +133,7 @@
 
       <!-- team -->
 
-      <section class="section team">
+      <section class="section team-section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="list team-list">
