--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 
     <main>
       <!-- buttoms -->
-      <section>
+      <section class="section">
         <div class="container">
           <h1 hidden class="main-title">What are we doing</h1>
           <ul class="list buttoms-list">
@@ -80,9 +80,9 @@
               <button type="button" class="button primary">Marketing</button>
             </li>
           </ul>
-
-          <!-- portfolio -->
-
+        </div>
+        <!-- portfolio -->
+        <div class="container">
           <ul class="list portfolio-list">
             <li>
               <a href="#" class="link">
