--- a/portfolio.html
+++ b/portfolio.html
@@ -68,17 +68,19 @@
         <div class="container">
           <h1 hidden class="main-title">What are we doing</h1>
           <ul class="list buttoms-list">
-            <li>
+            <li class="item">
               <button type="button" class="button primary">All</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button primary">Web Site</button>
             </li>
-            <li><button type="button" class="button primary">App</button></li>
-            <li>
+            <li class="item">
+              <button type="button" class="button primary">App</button>
+            </li>
+            <li class="item">
               <button type="button" class="button primary">Design</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button primary">Marketing</button>
             </li>
           </ul>
