--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <!-- header -->
 
     <header class="page-header">
-      <div class="container">
-        <nav class="navigation">
-          <a class="logo list link" href="./index.html"
-            >Web<span class="accent">Studio</span></a
-          >
+      <div class="container header-container">
+        <a class="logo list link" href="./index.html"
+          >Web<span class="accent">Studio</span></a
+        >
+        <nav>
           <ul class="site-nav list">
             <li class="item">
               <a href="./index.html" class="link-navigation link">Studio</a>
@@ -42,22 +42,21 @@
               <a href="" class="link-navigation link">Contacts</a>
             </li>
           </ul>
-
-          <address class="contact-list">
-            <ul class="list contacts-box">
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="link-contacts link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="item">
-                <a href="tel:+110001111111" class="link-contacts link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="contact-list">
+          <ul class="list contacts-box">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="link-contacts link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
