--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
         <!-- portfolio -->
         <div class="container">
           <ul class="list portfolio-list">
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img5.jpg"
@@ -99,7 +99,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img6.jpg"
@@ -111,7 +111,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img7.jpg"
@@ -123,7 +123,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img src="./images/img8.jpg" alt="Car wheel" width="360" />
                 <h2 class="card-title">Taxi Service</h2>
@@ -131,7 +131,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img9.jpg"
@@ -142,7 +142,7 @@
                 <p class="card-text">Design</p>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img10.jpg"
@@ -154,7 +154,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img11.jpg"
@@ -165,7 +165,7 @@
                 <p class="card-text">Design</p>
               </a>
             </li>
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img
                   src="./images/img12.jpg"
@@ -177,7 +177,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="portfolio-item">
               <a href="#" class="link">
                 <img src="./images/img14.jpg" alt="cappuchino" width="360" />
                 <h2 class="card-title">Fresh Coffee</h2>
