--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
     <!-- header -->
     <header class="page-header">
       <div class="container header-container">
-        <a class="logo list link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
-        >
-        <nav>
+        <nav class="header-navigation">
+          <a class="logo list link" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
           <ul class="site-nav list">
             <li class="item">
               <a href="./index.html" class="link-navigation link">Studio</a>
